# EarTrainerEQ

./: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  README.md  build.yml
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source /: PluginEditor.cpp  PluginProcessor.cpp
